--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+/*h1, h2, h3, div, img,p, section{
+  border: 2px red;
+} */
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -14,12 +18,264 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color:#f2f2f2;
+  display:flex;
+  position:relative;
+  margin-bottom: 100px;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo{
+  background-position:center;
+  background-size:contain;
+  background-image:url(../images/logo_place_header.svg);
+  background-repeat: no-repeat;
+}
+
+.logo_place_header {
+  position:absolute;
+  top:30px;
+  order:1;
+  left:64px;
+  width:228px;
+  height:32px;
+  z-index:2;
+}
+
+.header__title {
+  position: relative;
+  width:730px;
+  font-size:102px;
+  line-height:96px;
+  font-weight: 600;
+  left:64px;
+  margin-top:auto;
+  margin-bottom:auto;
+  display:inline-block;
+  z-index:2;
+}
+
+.header__subtitle {
+  position: absolute;
+  width:388px;
+  left:64px;
+  bottom:30px;
+  line-height:25px;
+  font-size:18px;
+  z-index:2;
+}
+
+.header__main-illustration {
+  position: absolute;
+  width:765px;
+  height:608px;
+  right:0;
+  bottom:0;
+  z-index:1;
+  max-width:50%;
+}
+
+.link {
+  color:#2F80ED;
+}
+
 .header__square-pic {
+  position: absolute;
   height: 568px;
   width: 568px;
+  background-color:#2F80ED;
+  top:64px;
+  right:0;
+}
+
+.description {
+  margin-top:100px;
+  margin-bottom:100px;
+}
+
+.description p {
+  margin-top:0;
+}
+
+.two-columns {
+  position: relative;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top:0;
+  width:80%;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.two-columns__brief {
+  flex-basis: 175px;
+  color: #2F80ED;
+  line-height:1.2;
+  font-size:18px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph {
+  font-size:24px;
+  line-height:34px;
+  margin-top:30px;
+  margin-bottom:30px;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+  font-size:24px;
+  line-height: 34px;
+}
+
+.two-columns__main-text {
+  flex-basis: 80%;
+  min-width: 784px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.digits {
+  position: relative;
+  margin-top:100px;
+  margin-bottom:100px;
+}
+
+.section-title {
+  margin-bottom:20px;
+  width:60%;
+  line-height:1.2;
+  font-size:60px;
+  font-weight: 600;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
+}
+
+.section-subtitle {
+  width:60%;
+  line-height: 34px;
+  font-size:24px;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
+  font-weight: normal;
+}
+
+.table {
+  width:1100px;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  position:relative;
+  margin-left: auto;
+  margin-right:auto;
+  justify-content: space-between;
+}
+
+.digits__table {
+   margin-top:0;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size:24px;
+  font-weight: 600;
+  margin-bottom:20px;
+  margin-top:0;
+}
+
+.table__text {
+  line-height:1.2;
+  font-size:18px;
+  margin-top:20px;
+}
+
+.table__cell {
+  width:250px;
+  min-height:5px;
+  margin-top: 60px;
+}
+
+.feinman {
+  background-color: #F2F2F2;
+  height:890px;
+  background-image: url(../images/feynman.png);
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  position: relative;
+}
+
+.feinmann__title {
+  width:648px;
+  line-height:1.15;
+  font-size:120px;
+  font-weight: 600;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:70px;
+  text-align: center;
+}
+
+.feinmann__subtitle {
+  line-height:51px;
+  font-size:36px;
+  font-weight: normal;
+  margin: 0  auto;
+  text-align: center;
+}
+
+.feinmann__link {
+  position: absolute;
+  top:50%;
+  line-height:51px;
+  font-size:36px;
+  right:48px;
+  color: #2F80ED;
+}
+
+.kaufman {
+  padding-bottom:90px;
+  color: white;
+  background-color:#1f1f1f;
+  overflow:hidden;
+  position: relative;
+}
+
+.kaufman__triangle {
+  background-image:url(../images/kaufman-triangle.svg);
+  width:877px;
+  height:877px;
+  position: absolute;
+  background-repeat: no-repeat;
+  right:-210px;
+  top:0;
+  background-size: contain;
+  z-index: 0;
+}
+
+.section-title_theme_dark{
+  margin-top: 90px;
+  width:60%;
+  line-height:1.15;
+  font-size:60px;
+  font-weight: 600;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:20px;
+  text-align: center;
+}
+
+.section-subtitle_theme_dark{
+  width:60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +284,79 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.footer {
+  padding-top:60px;
+  padding-bottom:40px;
+  background-color: #1f1f1f;
+  color:white;
+  min-height:350px;
+}
+
+.footer__columns {
+  width:90%;
+  margin-left:auto;
+  margin-right:auto;
+  position: relative;
+  min-height:350px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.footer__column {
+  margin-top:0;
+  margin-bottom:0;
+  margin-left:auto;
+  margin-right:auto;
+  width:100%;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+  width:228px;
+  height:32px;
+  left:0;
+  top:0;
+}
+
+.footer__column_content_copyright {
+  flex-basis:711px;
+}
+
+.footer__author {
+  line-height:25px;
+  font-size:18px;
+  margin-bottom:18px;
+  margin-top:18px;
+  bottom:0;
+  left:0;
+  position: absolute;
+  color:white;
+}
+
+.footer__social-icons {
+  width:16px;
+  height:16px; 
+  background-size: contain;
+  position: relative;
+}
+
+.footer__content-social a:link {
+  color:white;
+}
+
+.footer__column-social a:visited {
+  color: white;
+}
+
+.footer__column-links a:link {
+  color:white;
+}
+
+.footer__column-links a:visited {
+  color: white;
 }
