--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,14 @@
-/*h1, h2, h3, div, img,p, section{
+/**h1, h2, h3, div, img,p, section{
   border: 2px red;
-} */
+}**/
+
+
+p {
+  display: block;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
 
 .page {
   min-width: 1100px;
@@ -21,7 +29,6 @@
   background-color:#f2f2f2;
   display:flex;
   position:relative;
-  margin-bottom: 100px;
 }
 
 .logo{
@@ -34,7 +41,6 @@
 .logo_place_header {
   position:absolute;
   top:30px;
-  order:1;
   left:64px;
   width:228px;
   height:32px;
@@ -42,15 +48,13 @@
 }
 
 .header__title {
-  position: relative;
   width:730px;
   font-size:102px;
   line-height:96px;
   font-weight: 600;
-  left:64px;
+  margin-left:64px;
   margin-top:auto;
   margin-bottom:auto;
-  display:inline-block;
   z-index:2;
 }
 
@@ -64,18 +68,23 @@
   z-index:2;
 }
 
+.header__link {
+  text-decoration: none;
+  color: #2F80ED;
+}
+
+.header__link::after {
+  content: '\2192';
+}
+
 .header__main-illustration {
+  object-fit: fill;
   position: absolute;
   width:765px;
   height:608px;
   right:0;
   bottom:0;
   z-index:1;
-  max-width:50%;
-}
-
-.link {
-  color:#2F80ED;
 }
 
 .header__square-pic {
@@ -89,11 +98,7 @@
 
 .description {
   margin-top:100px;
-  margin-bottom:100px;
-}
-
-.description p {
-  margin-top:0;
+  margin-bottom:0;
 }
 
 .two-columns {
@@ -113,13 +118,22 @@
   line-height:1.2;
   font-size:18px;
   font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .two-columns__paragraph {
   font-size:24px;
   line-height:34px;
   margin-top:30px;
-  margin-bottom:30px;
+}
+
+.two-columns__paragraph:first-child{
+  margin-top:0;
+}
+
+.two-columns__paragraph:last-child{
+  margin-bottom:0;
 }
 
 .two-columns__span-accent {
@@ -145,7 +159,7 @@
 .section-title {
   margin-bottom:20px;
   width:60%;
-  line-height:1.2;
+  line-height:1.15;
   font-size:60px;
   font-weight: 600;
   margin-left:auto;
@@ -182,7 +196,7 @@
   line-height: 1.15;
   font-size:24px;
   font-weight: 600;
-  margin-bottom:20px;
+  margin-bottom:0;
   margin-top:0;
 }
 
@@ -190,36 +204,39 @@
   line-height:1.2;
   font-size:18px;
   margin-top:20px;
+  margin-bottom:0;
 }
 
 .table__cell {
   width:250px;
-  min-height:5px;
   margin-top: 60px;
 }
 
-.feinman {
+.feynman {
   background-color: #F2F2F2;
-  height:890px;
+  min-height:890px;
   background-image: url(../images/feynman.png);
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 867px 637px;
   position: relative;
+  box-sizing: border-box;
 }
 
-.feinmann__title {
+.feynman__title {
   width:648px;
   line-height:1.15;
   font-size:120px;
   font-weight: 600;
   margin-left:auto;
   margin-right:auto;
+  margin-top: 0;
   margin-bottom:70px;
+  padding-top: 100px;
   text-align: center;
 }
 
-.feinmann__subtitle {
+.feynman__subtitle {
   line-height:51px;
   font-size:36px;
   font-weight: normal;
@@ -227,13 +244,18 @@
   text-align: center;
 }
 
-.feinmann__link {
+.feynman__link {
   position: absolute;
   top:50%;
   line-height:51px;
   font-size:36px;
   right:48px;
   color: #2F80ED;
+  text-decoration: none;
+}
+
+.feynman__link::after {
+  content: '\2192';
 }
 
 .kaufman {
@@ -253,10 +275,10 @@
   right:-210px;
   top:0;
   background-size: contain;
-  z-index: 0;
+  z-index: -1;
 }
 
-.section-title_theme_dark{
+.kaufman__section-title_dark{
   margin-top: 90px;
   width:60%;
   line-height:1.15;
@@ -268,7 +290,7 @@
   text-align: center;
 }
 
-.section-subtitle_theme_dark{
+.Kaufman__section-subtitle_dark{
   width:60%;
   line-height: 34px;
   font-size: 24px;
@@ -288,11 +310,12 @@
 }
 
 .footer {
-  padding-top:60px;
-  padding-bottom:40px;
+  min-height:350px;
+  box-sizing: border-box;
   background-color: #1f1f1f;
   color:white;
-  min-height:350px;
+  display: flex;
+  padding-bottom: 40px;
 }
 
 .footer__columns {
@@ -300,31 +323,29 @@
   margin-left:auto;
   margin-right:auto;
   position: relative;
-  min-height:350px;
   display:flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 
 .footer__column {
   margin-top:0;
   margin-bottom:0;
-  margin-left:auto;
-  margin-right:auto;
-  width:100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo_place_footer {
   background-image: url(../images/logo_place_footer.svg);
   width:228px;
   height:32px;
-  left:0;
-  top:0;
 }
 
 .footer__column_content_copyright {
   flex-basis:711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .footer__author {
@@ -332,9 +353,6 @@
   font-size:18px;
   margin-bottom:18px;
   margin-top:18px;
-  bottom:0;
-  left:0;
-  position: absolute;
   color:white;
 }
 
@@ -343,20 +361,23 @@
   height:16px;
   background-size: contain;
   position: relative;
+  padding-right: 10px;
 }
 
-.footer__content-social a:link {
+ul {
+  padding-inline-start: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+.footer__column-link {
   color:white;
+  text-decoration: none;
 }
 
-.footer__column-social a:visited {
+.footer__column-link:visited {
   color: white;
-}
-
-.footer__column-links a:link {
-  color:white;
-}
-
-.footer__column-links a:visited {
-  color: white;
+  text-decoration: none;
 }
