--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
-/**h1, h2, h3, div, img,p, section{
+/*h1, h2, h3, div, img,p, section{
   border: 2px red;
-}**/
+}*/
 
 
 p {
@@ -12,12 +12,8 @@ p {
 
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -25,47 +21,46 @@ p {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
-  background-color:#f2f2f2;
-  display:flex;
-  position:relative;
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
 }
 
-.logo{
-  background-position:center;
-  background-size:contain;
-  background-image:url(../images/logo_place_header.svg);
+.logo {
+  background-position: center;
+  background-size: contain;
+  background-image: url(../images/logo_place_header.svg);
   background-repeat: no-repeat;
 }
 
 .logo_place_header {
-  position:absolute;
-  top:30px;
-  left:64px;
-  width:228px;
-  height:32px;
-  z-index:2;
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 228px;
+  height: 32px;
+  z-index: 2;
 }
 
 .header__title {
-  width:730px;
-  font-size:102px;
-  line-height:96px;
+  width: 730px;
+  font-size: 102px;
+  line-height: 96px;
   font-weight: 600;
-  margin-left:64px;
-  margin-top:auto;
-  margin-bottom:auto;
-  z-index:2;
+  margin-left: 64px;
+  margin-top: auto;
+  margin-bottom: auto;
+  z-index: 2;
 }
 
 .header__subtitle {
   position: absolute;
-  width:388px;
-  left:64px;
-  bottom:30px;
-  line-height:25px;
-  font-size:18px;
-  z-index:2;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
+  z-index: 2;
 }
 
 .header__link {
@@ -80,141 +75,141 @@ p {
 .header__main-illustration {
   object-fit: fill;
   position: absolute;
-  width:765px;
-  height:608px;
-  right:0;
-  bottom:0;
-  z-index:1;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 .header__square-pic {
   position: absolute;
   height: 568px;
   width: 568px;
-  background-color:#2F80ED;
-  top:64px;
-  right:0;
+  background-color: #2F80ED;
+  top: 64px;
+  right: 0;
 }
 
 .description {
-  margin-top:100px;
-  margin-bottom:0;
+  margin-top: 100px;
+  margin-bottom: 0;
 }
 
 .two-columns {
   position: relative;
-  display:flex;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top:0;
-  width:80%;
-  margin-left:auto;
-  margin-right:auto;
+  margin-top: 0;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .two-columns__brief {
   flex-basis: 175px;
   color: #2F80ED;
-  line-height:1.2;
-  font-size:18px;
+  line-height: 1.2;
+  font-size: 18px;
   font-weight: normal;
   margin-top: 0;
   margin-bottom: 0;
 }
 
 .two-columns__paragraph {
-  font-size:24px;
-  line-height:34px;
-  margin-top:30px;
+  font-size: 24px;
+  line-height: 34px;
+  margin-top: 30px;
 }
 
-.two-columns__paragraph:first-child{
-  margin-top:0;
+.two-columns__paragraph:first-child {
+  margin-top: 0;
 }
 
-.two-columns__paragraph:last-child{
-  margin-bottom:0;
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
   font-weight: 600;
-  font-size:24px;
+  font-size: 24px;
   line-height: 34px;
 }
 
 .two-columns__main-text {
   flex-basis: 80%;
   min-width: 784px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .digits {
   position: relative;
-  margin-top:100px;
-  margin-bottom:100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .section-title {
-  margin-bottom:20px;
-  width:60%;
-  line-height:1.15;
-  font-size:60px;
+  margin-bottom: 20px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
   font-weight: 600;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
 .section-subtitle {
-  width:60%;
+  width: 60%;
   line-height: 34px;
-  font-size:24px;
+  font-size: 24px;
   text-align: center;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: normal;
 }
 
 .table {
-  width:1100px;
-  display:flex;
+  width: 1100px;
+  display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  position:relative;
+  position: relative;
   margin-left: auto;
-  margin-right:auto;
+  margin-right: auto;
   justify-content: space-between;
 }
 
 .digits__table {
-   margin-top:0;
+  margin-top: 0;
 }
 
 .table__heading {
   line-height: 1.15;
-  font-size:24px;
+  font-size: 24px;
   font-weight: 600;
-  margin-bottom:0;
-  margin-top:0;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .table__text {
-  line-height:1.2;
-  font-size:18px;
-  margin-top:20px;
-  margin-bottom:0;
+  line-height: 1.2;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .table__cell {
-  width:250px;
+  width: 250px;
   margin-top: 60px;
 }
 
 .feynman {
   background-color: #F2F2F2;
-  min-height:890px;
+  min-height: 890px;
   background-image: url(../images/feynman.png);
   background-position: left bottom;
   background-repeat: no-repeat;
@@ -224,32 +219,32 @@ p {
 }
 
 .feynman__title {
-  width:648px;
-  line-height:1.15;
-  font-size:120px;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
   font-weight: 600;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 0;
-  margin-bottom:70px;
+  margin-bottom: 70px;
   padding-top: 100px;
   text-align: center;
 }
 
 .feynman__subtitle {
-  line-height:51px;
-  font-size:36px;
+  line-height: 51px;
+  font-size: 36px;
   font-weight: normal;
-  margin: 0  auto;
+  margin: 0 auto;
   text-align: center;
 }
 
 .feynman__link {
   position: absolute;
-  top:50%;
-  line-height:51px;
-  font-size:36px;
-  right:48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  right: 48px;
   color: #2F80ED;
   text-decoration: none;
 }
@@ -259,48 +254,47 @@ p {
 }
 
 .kaufman {
-  padding-bottom:90px;
+  padding-bottom: 90px;
   color: white;
-  background-color:#1f1f1f;
-  overflow:hidden;
+  background-color: #1f1f1f;
+  overflow: hidden;
   position: relative;
 }
 
 .kaufman__triangle {
-  background-image:url(../images/kaufman-triangle.svg);
-  width:877px;
-  height:877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  width: 877px;
+  height: 877px;
   position: absolute;
   background-repeat: no-repeat;
-  right:-210px;
-  top:0;
+  right: -210px;
+  top: 0;
   background-size: contain;
   z-index: -1;
 }
 
-.kaufman__section-title_dark{
+.kaufman__section-title_dark {
   margin-top: 90px;
-  width:60%;
-  line-height:1.15;
-  font-size:60px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
   font-weight: 600;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-.Kaufman__section-subtitle_dark{
-  width:60%;
+.Kaufman__section-subtitle_dark {
+  width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
@@ -310,55 +304,55 @@ p {
 }
 
 .footer {
-  min-height:350px;
+  min-height: 350px;
   box-sizing: border-box;
   background-color: #1f1f1f;
-  color:white;
+  color: white;
   display: flex;
   padding-bottom: 40px;
 }
 
 .footer__columns {
-  width:90%;
-  margin-left:auto;
-  margin-right:auto;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
-  display:flex;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .footer__column {
-  margin-top:0;
-  margin-bottom:0;
+  margin-top: 0;
+  margin-bottom: 0;
   display: flex;
   flex-direction: column;
 }
 
 .logo_place_footer {
   background-image: url(../images/logo_place_footer.svg);
-  width:228px;
-  height:32px;
+  width: 228px;
+  height: 32px;
 }
 
 .footer__column_content_copyright {
-  flex-basis:711px;
+  flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .footer__author {
-  line-height:25px;
-  font-size:18px;
-  margin-bottom:18px;
-  margin-top:18px;
-  color:white;
+  line-height: 25px;
+  font-size: 18px;
+  margin-bottom: 18px;
+  margin-top: 18px;
+  color: white;
 }
 
 .footer__social-icons {
-  width:16px;
-  height:16px;
+  width: 16px;
+  height: 16px;
   background-size: contain;
   position: relative;
   padding-right: 10px;
@@ -373,7 +367,7 @@ li {
 }
 
 .footer__column-link {
-  color:white;
+  color: white;
   text-decoration: none;
 }
 
