--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,6 @@
   border: 2px red;
 }*/
 
-
-p {
-  display: block;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -61,6 +53,8 @@ p {
   line-height: 25px;
   font-size: 18px;
   z-index: 2;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__link {
@@ -73,7 +67,7 @@ p {
 }
 
 .header__main-illustration {
-  object-fit: fill;
+  object-fit: cover;
   position: absolute;
   width: 765px;
   height: 608px;
@@ -121,14 +115,12 @@ p {
   font-size: 24px;
   line-height: 34px;
   margin-top: 30px;
+  /*margin-top: 0; Без данного правила отображение страницы в полном размере корректно*/
+  margin-bottom: 0;
 }
 
 .two-columns__paragraph:first-child {
   margin-top: 0;
-}
-
-.two-columns__paragraph:last-child {
-  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
@@ -157,6 +149,7 @@ p {
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
+  margin-top: 0;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -167,6 +160,8 @@ p {
   line-height: 34px;
   font-size: 24px;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   font-weight: normal;
@@ -178,9 +173,12 @@ p {
   flex-wrap: wrap;
   flex-direction: row;
   position: relative;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
+  padding-left: 0;
 }
 
 .digits__table {
@@ -259,6 +257,7 @@ p {
   background-color: #1f1f1f;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -273,7 +272,7 @@ p {
   z-index: -1;
 }
 
-.kaufman__section-title_dark {
+.section-title__theme_dark {
   margin-top: 90px;
   width: 60%;
   line-height: 1.15;
@@ -285,7 +284,7 @@ p {
   text-align: center;
 }
 
-.Kaufman__section-subtitle_dark {
+.section-subtitle__theme_dark {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
@@ -301,6 +300,7 @@ p {
   margin-right: 0;
   margin-top: 80px;
   z-index: 1;
+  list-style-type: none;
 }
 
 .footer {
@@ -309,6 +309,7 @@ p {
   background-color: #1f1f1f;
   color: white;
   display: flex;
+  padding-top: 60px;
   padding-bottom: 40px;
 }
 
@@ -350,7 +351,14 @@ p {
   color: white;
 }
 
-.footer__social-icons {
+.footer__column_heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  padding-bottom: 20px;
+}
+
+.footer__social-icon {
   width: 16px;
   height: 16px;
   background-size: contain;
@@ -358,17 +366,17 @@ p {
   padding-right: 10px;
 }
 
-ul {
-  padding-inline-start: 0;
-}
-
-li {
+.footer__column-links{
   list-style-type: none;
+  padding-inline-start: 0;
 }
 
 .footer__column-link {
   color: white;
   text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .footer__column-link:visited {
