--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-/*h1, h2, h3, div, img,p, section{
-  border: 2px red;
-}*/
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -272,7 +268,7 @@
   z-index: -1;
 }
 
-.section-title__theme_dark {
+.section-title_theme_dark {
   margin-top: 90px;
   width: 60%;
   line-height: 1.15;
@@ -284,7 +280,7 @@
   text-align: center;
 }
 
-.section-subtitle__theme_dark {
+.section-subtitle_theme_dark {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
@@ -351,11 +347,13 @@
   color: white;
 }
 
-.footer__column_heading {
+.footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
   padding-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .footer__social-icon {
@@ -369,6 +367,8 @@
 .footer__column-links{
   list-style-type: none;
   padding-inline-start: 0;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
 
 .footer__column-link {
