--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,5 @@
+@import url(../vendor/normalize.css);
+
 @import url(../blocks/root/root.css);
 
 @import url(../blocks/rotation/rotation.css);
@@ -9,6 +11,8 @@
 @import url(../blocks/cards/__image/cards__image.css);
 
 @import url(../blocks/cards/__item/cards__item.css);
+
+@import url(../blocks/cards/__title/cards__title.css);
 
 @import url(../blocks/description/description.css);
 
@@ -70,7 +74,7 @@
 
 @import url(../blocks/khan/__container/khan__container.css);
 
-@import url(../blocks/khan/__quote-author-subline/__quote-author-subline.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
 
 @import url(../blocks/khan/__quote-author/khan__quote-author.css);
 
