--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,6 +1,7 @@
 .khan__buy-link {
     align-self: flex-start;
     margin: 0;
+    margin-top: 68px;
     line-height: 42px;
     font-size: 30px;
     font-weight: normal;
