--- a/blocks/section-title/_theme/section-title_theme_dark.css
+++ b/blocks/section-title/_theme/section-title_theme_dark.css
@@ -1,5 +1,5 @@
 .section-title_theme_dark {
-    margin-top: 90px;
+    margin-top: 0;
     width: 60%;
     line-height: 1.15;
     font-size: 60px;
