--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,10 @@
 .footer {
-    min-height: 350px;
-    box-sizing: border-box;
-    background-color: #1f1f1f;
-    color: white;
+    max-width: 1184px;
+    margin: 0;
+    padding-top: 0;
+    padding-left: 48px;
+    padding-right: 48px;
+    padding-bottom: 24px;
     display: flex;
-    padding-top: 60px;
-    padding-bottom: 40px;
-  }
+    justify-content: space-between;
+}
