--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,34 @@
 .header {
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
-    background-color: #f2f2f2;
-    display: flex;
-    position: relative;
-    overflow: hidden;
+  max-width: 1184px;
+  padding-top: 28px;
+  padding-left: 48px;
+  padding-right: 48px;
+  padding-bottom: 56px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding-bottom: 48px;
   }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding-top: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 48px;
+  }
+}
