--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,6 +1,8 @@
 .root {
-  min-width: 1100px;
-  max-width: 1600px;
+  font-family: 'Inter', Arial, sans-serif;
+  text-rendering: optimizeLegibility;
+  background-color: #2A2C2F;
+  max-width: 1280px;
+  min-width: 320px;
   margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
 }
